# cryptoforge

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  prometheus.yml  pyproject.toml
config/: default.yaml
config/strategies/: dca_fear.yaml  grid_trading.yaml  mean_reversion.yaml  momentum.yaml
scripts/: backfill_data.py  deploy.sh  run_backtest.py
src/: main.py
src/api/: server.py
src/backtesting/: engine.py  monte_carlo.py  report.py  walk_forward.py
src/core/: config.py  event_bus.py  exceptions.py  logger.py  state_manager.py
src/data/: candle_builder.py  feed_handler.py  historical_loader.py  models.py  orderbook_manager.py
src/execution/: exchange_client.py  order_manager.py  slippage_model.py
src/indicators/: regime.py  sentiment.py  technical.py  volume.py
src/ml/: feature_engine.py  regime_classifier.py  signal_model.py
src/monitoring/: dashboard.py  health_check.py  metrics.py  telegram_bot.py
src/optimizer/: __init__.py  capital_allocator.py  orchestrator.py  param_optimizer.py  performance_analyzer.py  trade_journal.py
src/risk/: circuit_breaker.py  portfolio_manager.py  position_sizer.py  risk_engine.py
src/strategies/: base.py  dca_fear.py  grid_trading.py  mean_reversion.py  momentum.py  strategy_manager.py
src/utils/: math_utils.py  retry.py  time_utils.py
tests/: conftest.py  test_backtesting.py  test_circuit_breaker.py  test_config.py  test_event_bus.py  test_order_manager.py  test_risk_engine.py  test_state_manager.py  test_state_recovery.py  test_strategies.py  test_utils.py
(+5 files in other folders)
